# Tydora

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-docs.yml  release.yml
docs/: Mermaid.md  Tiptap Notion-like.md  UI组件重构和交互体验优化.md  image-feature-spec.md  product-design.md  technical-architecture.md  双链需求文档.md  编辑器设置方案.md  自动更新配置.md
help-docs/: _index.md  index.html  script.js  styles.css  关于.md  双链图谱说.md  快捷键速查.md  快速开始.md  思维导图.md  测试.md
help-docs/css/: knowledge-graph.css
help-docs/js/: knowledge-graph.js
help-docs/主题/: Typora主题.md  代码高亮主题.md  内置主题.md
help-docs/导航与搜索/: 命令面板.md  大纲面板.md  快速打开.md
help-docs/文件管理/: 仓库.md  文件操作.md  文件树.md  文件预览.md
help-docs/知识管理/: Wiki链接.md  反向链接.md  嵌入内容.md  知识图谱.md  链接索引.md
help-docs/编辑器/: Markdown语法.md  代码块.md  右键菜单.md  打字机模式.md  数学公式.md  编辑模式.md  表格操作.md
help-docs/设置/: 图片设置.md  快捷键设置.md  思维导图设置.md  编辑器设置.md  通用设置.md
hooks/: wiki_links.py
overrides/: main.html
patches/: tiptap-markdown+0.9.0.patch
scripts/: copy-vditor-assets.mjs  patch-tiptap-focus.mjs  release.ps1  replace-icon.js  run-tauri.mjs  sync-version.mjs
src/: App.css  App.tsx  BacklinksPanel.css  CommandPalette.tsx  ConfirmDialog.tsx  FilePreview.css  FilePreview.tsx  GraphView.css  GraphView.tsx  GraphWindow.tsx  ImageManager.ts  LinkIndexService.ts  LinkParser.ts  MindmapView.css  MindmapView.tsx  MindmapWindow.css  MindmapWindow.tsx  PublishPanel.css  PublishService.ts  QuickOpen.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  ThemeManager.ts  UpdateLinkDialog.tsx  VditorEditor.css  VditorEditor.tsx  WikiLink.css  WikiLinkAutocomplete.css  WikiLinkAutocomplete.tsx  WikiLinkProcessor.ts  codeThemes.ts  main.tsx  themes.css  themes.tsx  useVaultWatcher.ts  vditor-theme.css
src-tauri/: Cargo.toml  tauri.conf.json  tydora.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  proxy.rs  remote_image.rs  watcher_commands.rs
website/: README.md  index.html  robots.txt  script.js  styles.css
(+97 files in other folders)
