[package]
name = "tydora"
version = "0.1.0"
description = "A modern Markdown editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "tydora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = { version = "2", features = ["default"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
